--- a/public/index.html
+++ b/public/index.html
@@ -10,16 +10,7 @@
   </head>
   <body>
     <h1>Hello chat app</h1>
-    <script src="socket.io/socket.io.js" ></script>
-    <script>
-    var socket=io();
-    socket.on('connect',()=>{
-        console.log("connected to server");
-    });
-
-    socket.on('disconnect',()=>{
-        console.log("Disconnected from server");
-    })
-    </script>
+    <script src="socket.io/socket.io.js"></script>
+    <script src="./js/index.js"></script>
   </body>
 </html>
